--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="fragment" content="!">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
     <meta charset="UTF-8">
+	<meta http-equiv="Cache-Control" content="max-age=7200" />
+	<meta http-equiv="Expires" content="Mon, 20 Jul 2009 23:00:00 GMT" />
     <style type="text/css">
     /* hide the main content while we assemble everything */
     .md-hidden-load { display: none; }
