--- a/index.html
+++ b/index.html
@@ -4498,5 +4498,24 @@ function googlemapsReady() {
 
     <div id="md-all">
     </div>
+    <div>
+	    <noscript>Please enable JavaScript to view the comment form powered by <a href="https://commentit.io/">Comm(ent|it)</a></noscript>
+		<div id="commentit"></div>
+		<script type="text/javascript">
+		  /** CONFIGURATION VARIABLES **/
+		  var commentitUsername = 'liminany';
+		  var commentitRepo = 'liminany/liminany.github.io';
+		  var commentitPath = '{{ page.path }}';
+
+		  /** DON'T EDIT FOLLOWING LINES **/
+		  (function() {
+		      var commentit = document.createElement('script');
+		      commentit.type = 'text/javascript';
+		      commentit.async = true;
+		      commentit.src = 'https://commentit.io/static/embed/dist/commentit.js';
+		      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(commentit);
+		  })();
+		</script>
+    </div>
 </body>
 </html>
