--- a/index.html
+++ b/index.html
@@ -4504,7 +4504,7 @@ function googlemapsReady() {
 		<script type="text/javascript">
 		  /** CONFIGURATION VARIABLES **/
 		  var commentitUsername = 'liminany';
-		  var commentitRepo = 'liminany/liminany.github.io';
+		  var commentitRepo = 'liminany.github.io/m';
 		  var commentitPath = '{{ page.path }}';
 
 		  /** DON'T EDIT FOLLOWING LINES **/
