--- a/index.html
+++ b/index.html
@@ -4504,8 +4504,8 @@ function googlemapsReady() {
 		<script type="text/javascript">
 		  /** CONFIGURATION VARIABLES **/
 		  var commentitUsername = 'liminany';
-		  var commentitRepo = 'liminany.github.io/m';
-		  var commentitPath = '{{ page.path }}';
+		  var commentitRepo = 'liminany/liminany.github.io';
+		  var commentitPath = 'm/'+location.hash;
 
 		  /** DON'T EDIT FOLLOWING LINES **/
 		  (function() {
