--- a/index.html
+++ b/index.html
@@ -4505,7 +4505,7 @@ function googlemapsReady() {
 		  /** CONFIGURATION VARIABLES **/
 		  var commentitUsername = 'liminany';
 		  var commentitRepo = 'liminany/m';
-		  var commentitPath = 'm/'+location.hash;
+		  var commentitPath = location.hash.replace('#!','');
 
 		  /** DON'T EDIT FOLLOWING LINES **/
 		  (function() {
