--- a/index.html
+++ b/index.html
@@ -4498,15 +4498,13 @@ function googlemapsReady() {
 
     <div id="md-all">
 	  
-    </div>
-      <div>  
-	    <div id="container"></div>
+    </div>      	   
 		<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-	        //a中添加了href为#
-		<script src="http://docs.devopshub.cn/static/gitment.browser.js"></script>//https://imsun.github.io/gitment/dist/gitment.browser.js
+	        <!--a中添加了href为#,原文件：https://imsun.github.io/gitment/dist/gitment.browser.js-->
+		<script src="http://docs.devopshub.cn/static/gitment.browser.js"></script>
 		<script>
 		var gitment = new Gitment({
-		  id: location.hash, // 可选。默认为 location.href
+		  id: location.hash, 
 		  owner: 'liminany',
 		  repo: 'm',
 		  oauth: {
@@ -4516,8 +4514,8 @@ function googlemapsReady() {
 		});
 		$("#md-content").append("<div id='commit-container' class='row' ></div>");	
 		gitment.render('commit-container');
-		$(".gitment-editor-logout-link").attr("href","#");//fix a 标签中href未定义时，会引起hasMarkdownFileExtension报错的问题
+		<!--fix a 标签中href未定义时，会引起hasMarkdownFileExtension报错的问题-->
+		$(".gitment-editor-logout-link").attr("href","#");
 		</script>
-    </div>
 </body>
 </html>
