--- a/index.html
+++ b/index.html
@@ -4501,7 +4501,7 @@ function googlemapsReady() {
     </div>      	   
 		<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 	        <!--a中添加了href为#,原文件：https://imsun.github.io/gitment/dist/gitment.browser.js-->
-		<script src="http://docs.devopshub.cn/static/gitment.browser.js"></script>
+		<script src="https://docs.devopshub.cn/static/gitment.browser.js"></script>
 		<script>
 		var gitment = new Gitment({
 		  id: location.hash, 
