--- a/index.html
+++ b/index.html
@@ -4499,25 +4499,25 @@ function googlemapsReady() {
     <div id="md-all">
 	  
     </div>
-    
-		<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-	        <!--a中添加了href为#,原文件：https://imsun.github.io/gitment/dist/gitment.browser.js-->
+  <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+	    <!--a中添加了href为#,原文件：https://imsun.github.io/gitment/dist/gitment.browser.js-->
 		<script src="https://docs.devopshub.cn/static/gitment.browser.js"></script>
-		<script>
-		$("#md-content").append("<div id='commit-container' class='row' style='90%' ></div>");
-		var gitment = new Gitment({
-		  id: location.hash, 
-		  owner: 'liminany',
-		  repo: 'm',
-		  oauth: {
-		    client_id: '5bf4665babc03a5c543f',
-		    client_secret: '6d27bd1469d52f97f1b37ce85dd31f208e5f7de0',
-		  },
-		});
-		//$("#md-content").append("<div id='commit-container' class='row' style='90%' ></div>");	
-		gitment.render('commit-container');
-		<!--fix a 标签中href未定义时，会引起hasMarkdownFileExtension报错的问题-->
-		$(".gitment-editor-logout-link").attr("href","#");
+		<script>					
+			(function($) {
+				$("#md-content").append("<div id='commit-container' class='row' style='90%' ></div>");
+				var gitment = new Gitment({
+				  id: location.hash, 
+				  owner: 'liminany',
+				  repo: 'm',
+				  oauth: {
+					client_id: '5bf4665babc03a5c543f',
+					client_secret: '6d27bd1469d52f97f1b37ce85dd31f208e5f7de0',
+				  },
+				});
+				//$("#md-content").append("<div id='commit-container' class='row' style='90%' ></div>");	
+				gitment.render('commit-container');
+			}(jQuery));
 		</script>
+	
 </body>
 </html>
