--- a/index.html
+++ b/index.html
@@ -4499,6 +4499,7 @@ function googlemapsReady() {
     <div id="md-all">
 	  
     </div>
+   <div id='commit-container' class='row' style='90%' ></div>
   <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 	    <!--a中添加了href为#,原文件：https://imsun.github.io/gitment/dist/gitment.browser.js-->
 		<script src="https://docs.devopshub.cn/static/gitment.browser.js"></script>
@@ -4512,10 +4513,7 @@ function googlemapsReady() {
 					client_secret: '6d27bd1469d52f97f1b37ce85dd31f208e5f7de0',
 				  },
 				});					
-				gitment.render('md-content');
-			(function($) {
-				//$("#md-content").append("<div id='commit-container' class='row' style='90%' ></div>");				
-			}(jQuery));
+				gitment.render('commit-container');			
 		</script>
 	
 </body>
