--- a/index.html
+++ b/index.html
@@ -4489,6 +4489,7 @@ function googlemapsReady() {
 </script>
 <!-- END dist/MDwiki.js -->
 <script type="text/javascript">$.md.logThreshold = $.md.loglevel.DEBUG;</script>
+<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 </head>
 <body>
     <noscript>
@@ -4499,6 +4500,20 @@ function googlemapsReady() {
     <div id="md-all">
 	  
     </div> 
-	
+	<div id="container"></div>
+    
+    <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+    <script>
+    var gitment = new Gitment({
+    id: location.href.replace("#!",""), // 可选。默认为 location.href
+    owner: 'liminany',
+    repo: 'm',
+    oauth: {
+        client_id: '5bf4665babc03a5c543f',
+        client_secret: '6d27bd1469d52f97f1b37ce85dd31f208e5f7de0',
+    },
+    })
+    gitment.render('container')
+    </script>
 </body>
 </html>
