--- a/index.html
+++ b/index.html
@@ -4462,6 +4462,7 @@ function googlemapsReady() {
             '<div class="row" >&nbsp;&nbsp;&nbsp;'
             + ' <a id="foot-pre" class="btn btn-default" title="" accesskey="n" ><i class="glyphicon-backward">&nbsp;</i> Previous</a>'
             + ' <a id= "foot-next" class="btn btn-default pull-right" title= "" accesskey= "p" >&nbsp;&nbsp;Next&nbsp;&nbsp;&nbsp;<i class="glyphicon-forward">&nbsp;</i></a > '
+            + '<div id="container"></div>'
             + ' </div>';
 
         $("#md-content").append(footnext);
@@ -4501,7 +4502,7 @@ function googlemapsReady() {
     <div id="md-all">
 	  
     </div> 
-	<div id="container"></div>
+	
     <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
