gitment page id 问题修复 #4
 <script>
    gitment = new Gitment({
    id: location.hash.replace("#!",""),//location.href.replace("#!",""), // 可选。默认为 location.href
    owner: 'liminany',
    repo: 'm',
    oauth: {
        client_id: '5bf4665babc03a5c543f',
        client_secret: '6d27bd1469d52f97f1b37ce85dd31f208e5f7de0',
    },
    })

    </script>

--- a/index.html
+++ b/index.html
@@ -4507,7 +4507,7 @@ function googlemapsReady() {
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
     gitment = new Gitment({
-    id: location.href.replace("#!",""), // 可选。默认为 location.href
+    id: location.hash.replace("#!",""),//location.href.replace("#!",""), // 可选。默认为 location.href
     owner: 'liminany',
     repo: 'm',
     oauth: {
