--- a/index.html
+++ b/index.html
@@ -4503,8 +4503,17 @@ function googlemapsReady() {
 	  
     </div> 
 	
-    <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-    <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+    <!-- <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+    <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script> -->
+    <!--
+        由于这个问题 https://github.com/imsun/gitment/issues/170 导致官方提供的  gitment.js失效（原因为用来跨域请求的接口的SSL证书过期导致），所以引用了其他用户搭建的静态资源  
+        参考资料：
+        - https://sherry0429.github.io/2019/02/12/gitment%E4%BF%AE%E5%A4%8D/
+        - https://awen.me/post/64465.html
+    
+    -->
+    <link rel="stylesheet" href="https://wzxjayce.github.io/gitment.css">
+    <script src="https://wzxjayce.github.io/gitment.js"></script>
     <script>
     gitment = new Gitment({
     id: location.hash.replace("#!",""),//location.href.replace("#!",""), // 可选。默认为 location.href
