--- a/index.html
+++ b/index.html
@@ -4518,14 +4518,15 @@ function googlemapsReady() {
     <script>
     gitment = new Gitment({
     id: location.hash.replace("#!",""),//location.href.replace("#!",""), // 可选。默认为 location.href
-    owner: 'liminany',
-    repo: 'm',
+    owner: 'lclvip',
+    repo: 'studyGit',
     oauth: {
-        client_id: '5bf4665babc03a5c543f',
-        client_secret: '6d27bd1469d52f97f1b37ce85dd31f208e5f7de0',
+        client_id: 'b7ab5001abd09c8146ae',
+        client_secret: '58475e090effd69842d9ce116651db04367f1108',
     },
     })
     
+    gitment.render('comments')
     </script>
 </body>
 </html>
