changs again index.html

--- a/index.html
+++ b/index.html
@@ -4513,8 +4513,8 @@ function googlemapsReady() {
 		- https://blog.csdn.net/wardseptember/article/details/82828391
     
     -->
-    <link rel="stylesheet" href="https://wzxjayce.github.io/gitment.css">
-    <script src="https://wzxjayce.github.io/gitment.js"></script>
+    <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+    <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
     gitment = new Gitment({
     id: location.hash.replace("#!",""),//location.href.replace("#!",""), // 可选。默认为 location.href
