--- a/index.html
+++ b/index.html
@@ -4517,7 +4517,7 @@ function googlemapsReady() {
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
     gitment = new Gitment({
-    id: location.hash.replace("#!",""),//location.href.replace("#!",""), // 可选。默认为 location.href
+    id: '<%= page.date %>',
     owner: 'lclvip',
     repo: 'studyGit',
     oauth: {
