--- a/index.html
+++ b/index.html
@@ -4502,7 +4502,7 @@ function googlemapsReady() {
     <div id="md-all">
 	  
     </div> 
-	
+    <div id="comments"></div>	
     <!-- <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script> -->
     <!--
@@ -4517,7 +4517,7 @@ function googlemapsReady() {
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
     gitment = new Gitment({
-    id: '<%= page.date %>',
+    id: '',
     owner: 'lclvip',
     repo: 'studyGit',
     oauth: {
