--- a/index.html
+++ b/index.html
@@ -4502,7 +4502,7 @@ function googlemapsReady() {
     <div id="md-all">
 	  
     </div> 
-    <div id="comments"></div>	
+    
     <!-- <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script> -->
     <!--
@@ -4517,9 +4517,9 @@ function googlemapsReady() {
     <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
     <script>
     gitment = new Gitment({
-    id: '',
+    id: 'comments',
     owner: 'lclvip',
-    repo: 'studyGit',
+    repo: 'lclvip.github.io',
     oauth: {
         client_id: 'b7ab5001abd09c8146ae',
         client_secret: '58475e090effd69842d9ce116651db04367f1108',
