--- a/index.html
+++ b/index.html
@@ -4514,7 +4514,7 @@ function googlemapsReady() {
     
     -->
     <link rel="stylesheet" href="https://jjeejj.github.io/css/gitment.css">
-    <script src="https://jjeejj.github.io/js/gitment.js"></script>
+    <script src="https://www.wenjunjiang.win/js/gitment.js"></script>
     <script>
     gitment = new Gitment({
     id: 'comments',
