--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <!--
    This is MDwiki v0.6.2
@@ -4513,8 +4513,8 @@ function googlemapsReady() {
 		- https://blog.csdn.net/wardseptember/article/details/82828391
     
     -->
-    <link rel="stylesheet" href="https://jjeejj.github.io/css/gitment.css">
-    <script src="https://www.wenjunjiang.win/js/gitment.js"></script>
+    <link rel="stylesheet" href="https://lclvip.github.io/comment.css">
+    <script src="https://lclvip.github.io/comment.js"></script>
     <script>
     gitment = new Gitment({
     id: 'comments',
