--- a/index.html
+++ b/index.html
@@ -4513,8 +4513,8 @@ function googlemapsReady() {
 		- https://blog.csdn.net/wardseptember/article/details/82828391
     
     -->
-    <link rel="stylesheet" href="https://lclvip.github.io/comment.css">
-    <script src="https://lclvip.github.io/comment.js"></script>
+    <link rel="stylesheet" href="https://lclvip.github.io/static/comment.css">
+    <script src="https://lclvip.github.io/static/comment.js"></script>
     <script>
     gitment = new Gitment({
     id: 'comments',
